--- a/Blog.Web/Blog.Web.csproj
+++ b/Blog.Web/Blog.Web.csproj
@@ -22,8 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blog.Bll\Blog.Entity.csproj" />
     <ProjectReference Include="..\Blog.Dal\Blog.Dal.csproj" />
+    <ProjectReference Include="..\Blog.Entity\Blog.Entity.csproj" />
+    
   </ItemGroup>
 
 </Project>
