--- a/Blog.Dal/Blog.Dal.csproj
+++ b/Blog.Dal/Blog.Dal.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,7 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blog.Bll\Blog.Entity.csproj" />
     <ProjectReference Include="..\Blog.Entity\Blog.Entity.csproj" />
   </ItemGroup>
 
